--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-API=OPEN_AI_API
-TG_API=YOUR_TG_BOT_API
+API=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
+TG_API=6027669190:AAEx_mWSFFzWU1sURy3G1pOBE9Xhf8FsXtU
