--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.2",
+    "bottleneck": "^2.19.5",
     "dotenv": "^16.0.3",
     "mongoose": "^6.8.3",
     "openai": "^3.1.0",
