--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.2.2",
     "bottleneck": "^2.19.5",
+    "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
     "mongoose": "^6.8.3",
     "openai": "^3.1.0",
