--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bottleneck": "^2.19.5",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
+    "google-images": "^0.1.4",
     "mongoose": "^6.8.3",
     "openai": "^3.1.0",
     "pino": "^8.8.0",
