--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/speech": "^5.3.1",
     "axios": "^1.2.2",
     "bottleneck": "^2.19.5",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
+    "fs": "^0.0.1-security",
     "mongoose": "^6.8.3",
     "openai": "^3.1.0",
     "pino": "^8.8.0",
     "pino-pretty": "^9.1.1",
-    "telegraf": "^4.11.2"
+    "telegraf": "^4.11.2",
+    "util": "^0.12.5"
   }
 }
