--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "dotenv": "^16.0.3",
     "fs": "^0.0.1-security",
     "mongoose": "^6.8.3",
+    "node-fetch": "^3.3.0",
     "node-postal": "^1.1.2",
     "openai": "^3.1.0",
     "pino": "^8.8.0",
     "pino-pretty": "^9.1.1",
     "telegraf": "^4.11.2",
-    "tracking-url": "^1.0.1",
     "util": "^0.12.5"
   }
 }
