--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bottleneck": "^2.19.5",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
+    "ffmpeg": "^0.0.4",
     "fs": "^0.0.1-security",
     "mongoose": "^6.8.3",
     "node-postal": "^1.1.2",
