--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@google-cloud/speech": "^5.3.1",
     "axios": "^1.2.2",
     "bottleneck": "^2.19.5",
