--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^6.8.3",
     "node-postal": "^1.1.2",
     "openai": "^3.1.0",
+    "path": "^0.12.7",
     "pino": "^8.8.0",
     "pino-pretty": "^9.1.1",
     "telegraf": "^4.11.2",
