--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ffmpeg": "^0.0.4",
     "fluent-ffmpeg": "^2.1.2",
     "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "mongoose": "^6.8.3",
     "node-postal": "^1.1.2",
     "openai": "^3.1.0",
