--- a/package.json
+++ b/package.json
@@ -20,15 +20,14 @@
     "fluent-ffmpeg": "^2.1.2",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
+    "ioredis": "^5.3.1",
     "mongoose": "^6.8.3",
     "node-postal": "^1.1.2",
     "openai": "^3.1.0",
     "path": "^0.12.7",
     "pino": "^8.8.0",
     "pino-pretty": "^9.1.1",
-    "redis": "^4.6.5",
     "telegraf": "^4.11.2",
-    "telegraf-session-redis": "^5.1.0",
     "util": "^0.12.5"
   }
 }
