--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "fluent-ffmpeg": "^2.1.2",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
-    "ioredis": "^5.3.1",
+    "mongodb": "^5.1.0",
     "mongoose": "^6.8.3",
     "node-cron": "^3.0.2",
     "node-postal": "^1.1.2",
