--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pino-pretty": "^9.1.1",
     "pm2": "^5.3.0",
     "telegraf": "^4.11.2",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "wit-api": "^1.0.1"
   }
 }
