--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -13,7 +13,7 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ "arbola.ai-main", * ]
+    branches: [ "arbola.ai-main", ]
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ "arbola.ai-main" ]
